[tool.poetry]
name = "rollbot"
version = "1.0.1"
description = "Rollbot is a Discord bot for rolling dice."
authors = ["Thijs Miedema <mail@tmiedema.com>"]
license = "MIT"
packages = [
    {include="rollbot", from="src"}
]

[tool.poetry.dependencies]
python = "~3.12"
numpy = "^1"
matplotlib = "^3"
lark = "^1"
discord-py = "^2.3.2"
setuptools = "^70.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
